@@ -338,9 +338,9 @@ BEGIN
     EDITTEXT        IDC_MAGNET_DISP_HASH,56,42,178,12,ES_AUTOHSCROLL | ES_READONLY
     RTEXT           "Static",IDC_MAGNET_NAME,15,62,36,8
     EDITTEXT        IDC_MAGNET_DISP_NAME,56,60,178,12,ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "Radio1",IDC_MAGNET_QUEUE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,18,84,162,10
-    CONTROL         "Radio2",IDC_MAGNET_SEARCH,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,18,96,162,10
-    CONTROL         "Radio3",IDC_MAGNET_NOTHING,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,18,107,162,11
+    CONTROL         "Radio1",IDC_MAGNET_1_QUEUE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,18,84,162,10
+    CONTROL         "Radio2",IDC_MAGNET_2_SEARCH,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,18,96,162,10
+    CONTROL         "Radio3",IDC_MAGNET_3_NOTHING,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,18,107,162,11
     CONTROL         "Check1",IDC_MAGNET_REMEMBER,"Button",BS_AUTO3STATE | WS_TABSTOP,18,120,162,10
     DEFPUSHBUTTON   "OK",IDOK,184,88,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,184,112,50,14
