@@ -233,12 +233,12 @@
 #define IDC_LOG_OPTIONS 2093
 #define IDC_MAGNET_DISP_HASH 2094
 #define IDC_MAGNET_DISP_NAME 2095
-#define IDC_MAGNET_HASH 2096
-#define IDC_MAGNET_NAME 2097
-#define IDC_MAGNET_NOTHING 2098
-#define IDC_MAGNET_QUEUE 2099
-#define IDC_MAGNET_REMEMBER 2100
-#define IDC_MAGNET_SEARCH 2101
+#define IDC_MAGNET_1_QUEUE 2096
+#define IDC_MAGNET_2_SEARCH 2097
+#define IDC_MAGNET_3_NOTHING 2098
+#define IDC_MAGNET_HASH 2099
+#define IDC_MAGNET_NAME 2100
+#define IDC_MAGNET_REMEMBER 2101
 #define IDC_MAGNET_TEXT 2102
 #define IDC_MAX_FILELIST_SIZE 2103
 #define IDC_MAX_FILE_SIZE 2104
